# MyStroke_Backend

./: .gitattributes  .gitignore  Dockerfile  README.md  compose.yaml  loop_lt.bat  mystroke_efficientnet_95_224_weights.h5  pyproject.toml  train_media_pipe.ipynb
src/mystroke_backend/: main.py
